clusters/cl01tl/manifests/affine/HTTPRoute-affine.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: affine
  labels:
    app.kubernetes.io/instance: affine
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: affine
    helm.sh/chart: affine-5.2.1
  annotations:
    gethomepage.dev/description: AFFiNE
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Knowledge
    gethomepage.dev/icon: sh-affine-light.webp
    gethomepage.dev/name: Knowledge
    gethomepage.dev/podSelector: ""
    gethomepage.dev/siteMonitor: http://affine.affine:80/api/health
    gethomepage.dev/statusStyle: dot
    gethomepage.dev/weight: "200"
  namespace: affine
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "affine.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: affine
          namespace: affine
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
